# penguincode

./: CLAUDE.md  Dockerfile.server  README.md  config.yaml  docker-compose.yml  docker-entrypoint.sh  penguincode  pyproject.toml  requirements.txt
docs/: AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DOCS_RAG.md  MCP.md  MEMORY.md  SECURITY.md  TOOL_SUPPORT.md  USAGE.md
penguincode/agents/: __init__.py  base.py  chat.py  executor.py  explorer.py
penguincode/client/: __init__.py  auth.py  grpc_client.py  tool_executor.py
penguincode/config/: settings.py
penguincode/core/: repl.py
penguincode/docs_rag/: __init__.py  detector.py  fetcher.py  indexer.py  models.py  sources.py
penguincode/ollama/: client.py  types.py
penguincode/proto/: __init__.py  penguincode_pb2.py
penguincode/server/: __init__.py  main.py
penguincode/server/services/: __init__.py  auth.py  chat.py  health.py  tools.py
penguincode/shared/: types.py
penguincode_cli/: main.py
penguincode_cli/agents/: __init__.py  base.py  chat.py  debugger.py  docs.py  executor.py  explorer.py  intent.py  planner.py  prompts.py  refactor.py  researcher.py  reviewer.py  tester.py  tool_defs.py
penguincode_cli/client/: auth.py  grpc_client.py  tool_executor.py
penguincode_cli/config/: settings.py
penguincode_cli/core/: __init__.py  debug.py  repl.py  session.py
penguincode_cli/docs_rag/: detector.py  indexer.py  injector.py  models.py  sources.py
penguincode_cli/ollama/: __init__.py  client.py  types.py
penguincode_cli/proto/: penguincode.proto  penguincode_pb2_grpc.py
penguincode_cli/server/: interceptors.py  main.py
penguincode_cli/server/services/: auth.py  chat.py  health.py  tools.py
penguincode_cli/shared/: __init__.py  interfaces.py
penguincode_cli/tools/: __init__.py  base.py  bash.py  file_ops.py  memory.py  web.py
penguincode_cli/tools/engines/: base.py  duckduckgo.py  duckduckgo_mcp.py  factory.py  fireplexity.py  google.py  google_mcp.py  sciraai.py  searxng.py  searxng_mcp.py
penguincode_cli/tools/mcp/: client.py
penguincode_cli/ui/: __init__.py  console.py
vsix-extension/: package-lock.json
