[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penguincode"
version = "0.1.0"
description = "Penguin Code CLI - AI-powered coding assistant using Ollama"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.12"
authors = [
    { name = "Penguin Tech Inc", email = "dev@penguintech.io" }
]
keywords = ["cli", "ollama", "ai", "coding", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # CLI & UI
    "typer[all]>=0.9.0",
    "rich>=13.0.0",

    # Async & HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.0.0",

    # Configuration
    "pyyaml>=6.0",
    "markdown-it-py>=3.0.0",

    # Search & Tools
    "duckduckgo-search>=8.0.0",
    "pathspec>=0.12.0",
    "beautifulsoup4>=4.12.0",

    # Memory Layer (mem0)
    "mem0ai>=0.1.0",
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "psycopg2-binary>=2.9.0",

    # Server Mode
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "pyjwt>=2.9.0",

    # gRPC (Client-Server Mode)
    "grpcio>=1.60.0,<1.70.0",
    "grpcio-tools>=1.60.0,<1.70.0",
    "protobuf>=5.29.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
penguincode = "penguincode.main:app"

[project.urls]
Homepage = "https://github.com/penguintechinc/penguin-code"
Documentation = "https://github.com/penguintechinc/penguin-code#readme"
Repository = "https://github.com/penguintechinc/penguin-code"
Issues = "https://github.com/penguintechinc/penguin-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["penguincode"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
